--- a/index.html
+++ b/index.html
@@ -13,30 +13,27 @@
     <title>kakao talk</title>
     <link rel="stylesheet" href="css/style.css" />
     <style>
-      body {
-        height: 1000vh;
-        margin: 20px;
-      }
-      div {
-        width: 300px;
-        height: 300px;
+      a {
         color: white;
-        background-color: teal;
+        background-color: tomato;
+        text-decoration: none;
+        padding: 3px 5px;
+        border-radius: 5px;
+        font-size: 55px;
+        transition: all 0s ease-in-out;
       }
-      #different {
-        top: 0px;
-        left: 0px;
-        right: 0px;
-
-        position: fixed;
-        width: 100%;
-        height: 100px;
+      a:hover {
+        color: tomato;
         background-color: wheat;
+      }
+      img {
+        border: 10px solid black;
+        border-radius: 50%;
+        transform: rotateY(85deg) rotateX(20deg);
       }
     </style>
   </head>
   <body>
-    <div></div>
-    <div id="different"></div>
+    <img src="img/hyewon.jpeg" alt="" />
   </body>
 </html>
