--- a/friends.html
+++ b/friends.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="my website" />
-    <title>welchome to Kakao Clone</title>
+    <title>Friends - Kakao Clone</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -31,21 +31,30 @@
         <!--Lightning Icon-->
       </div>
     </div>
-
-    <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kakao Clone</h1>
-      <p class="welcome-header__text">
-        If you have a Kakao Account, <br />
-        log in with your email or phone number.
-      </p>
-    </header>
-
-    <form action="friends.html" method="get" id="login-form">
-      <input name="username" type="text" placeholder="Email or phone number" />
-      <input name="password" type="password" placeholder="Password" />
-      <input type="submit" value="Log In" />
-      <a href="#">Find Kakao Account or Password</a>
-    </form>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="friends.html"
+            ><i class="fas fa-user fa-2x"></i
+          ></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <span class="nav__notification">1</span>
+            <i class="far fa-comment fa-2x"></i>
+          </a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="#">
+            <div class="nav__dot"></div>
+            <i class="fas fa-ellipsis-h fa-2x"> </i>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <script
       src="https://kit.fontawesome.com/b93d87e700.js"
       crossorigin="anonymous"
