Update find screen & more screen

--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="my website" />
-    <title>Chats - Kakao Clone</title>
+    <title>Settings - Kakao Clone</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -31,36 +31,35 @@
         <!--Lightning Icon-->
       </div>
     </div>
-
-    <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <a href="javascript:history.back();">
+          <i class="fas fa-angle-left fa-3x"></i
+        ></a>
+      </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">Settings</h1>
+      </div>
+      <div class="alt-header__column">
+        <i class="fas fa-search fa-lg"></i>
       </div>
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://avatars.githubusercontent.com/u/89234129?v=4"
-            class="user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">kiko</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Kakao Account Info
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <span class="badge">1</span>
-        </div>
-      </div>
+      <ul class="settings-list">
+        <li class="settings__setting">
+          <i class="fas fa-bullhorn"></i>
+          <span>Notices</span>
+        </li>
+        <li class="settings__setting">
+          <i class="fas fa-flask"></i>
+          <span>Kakao Lab</span>
+        </li>
+        <li class="settings__setting">
+          <i class="fas fa-info-circle"></i>
+          <span>Version</span>
+        </li>
+      </ul>
     </main>
 
     <nav class="nav">
@@ -73,7 +72,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
