--- a/friends.html
+++ b/friends.html
@@ -47,7 +47,7 @@
       <i class="fas fa-chevron-right"></i>
     </a>
 
-    <main class="friends__screen">
+    <main class="main-screen">
       <div class="user-component">
         <div class="user-component__column">
           <img
