--- a/chats.html
+++ b/chats.html
@@ -43,24 +43,26 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://avatars.githubusercontent.com/u/89234129?v=4"
-            class="user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">kiko</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Kakao Account Info
-            </h6>
+      <a href="chat.html"
+        ><div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://avatars.githubusercontent.com/u/89234129?v=4"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">kiko</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kakao Account Info
+              </h6>
+            </div>
           </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <span class="badge">1</span>
-        </div>
-      </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <span class="badge">1</span>
+          </div>
+        </div></a
+      >
     </main>
 
     <nav class="nav">
