Add some animation

--- a/chat.html
+++ b/chat.html
@@ -84,6 +84,7 @@
       </div>
     </form>
 
+    <div id="no-mobile">Your screen is too big !</div>
     <script
       src="https://kit.fontawesome.com/b93d87e700.js"
       crossorigin="anonymous"
