--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <input type="submit" value="Log In" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
+    <div id="no-mobile">Your screen is too big !</div>
     <script
       src="https://kit.fontawesome.com/b93d87e700.js"
       crossorigin="anonymous"
