--- a/more.html
+++ b/more.html
@@ -148,6 +148,7 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">Your screen is too big !</div>
     <script
       src="https://kit.fontawesome.com/b93d87e700.js"
       crossorigin="anonymous"
